--- a/publications/index.html
+++ b/publications/index.html
@@ -103,10 +103,7 @@
       <ol>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 4px;">
-              [IROS'24]
-            </span>
-            D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 4px;">[IROS'24]</span> D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
             <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
               "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
             </a>
@@ -115,10 +112,7 @@
         </li>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [PerCom'24]
-            </span>
-            <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[PerCom'24]</span> <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
             <a href="https://ieeexplore.ieee.org/abstract/document/10494427" target="_blank">
               "PA2BLO: Low-Power, Personalized Audio Badge",
             </a>
@@ -127,10 +121,7 @@
         </li>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [MMSys'23]
-            </span>
-            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[MMSys'23]</span> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
             <a href="https://dl.acm.org/doi/10.1145/3587819.3590986" target="_blank">
               "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams",
             </a>
@@ -139,10 +130,7 @@
         </li>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [ISCAS'22]
-            </span>
-            <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[ISCAS'22]</span> <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
             <a href="https://ieeexplore.ieee.org/document/9937827" target="_blank">
               "An Always-On tinyML Acoustic Classifier for Ecological Applications",
             </a>
@@ -151,10 +139,7 @@
         </li>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [Sensors'22]
-            </span>
-            S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Sensors'22]</span> S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
             <a href="https://ieeexplore.ieee.org/document/9854404" target="_blank">
               "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles",
             </a>
@@ -169,10 +154,7 @@
       <ol>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [CoMoRea, PerCom'25]
-            </span>
-            <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[CoMoRea, PerCom'25]</span> <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
             <a href="#" target="_blank">
               "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
             </a>
@@ -187,10 +169,7 @@
       <ol>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [COMSNETS'24]
-            </span>
-            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[COMSNETS'24]</span> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
             <a href="#" target="_blank">
               "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
             </a>
@@ -199,10 +178,7 @@
         </li>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [tinyML Forum'21]
-            </span>
-            <u>Hemanth Reddy Sabbella</u>,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[tinyML Forum'21]</span> <u>Hemanth Reddy Sabbella</u>,
             <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg" target="_blank">
               "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights",
             </a>
@@ -217,10 +193,7 @@
       <ol>
         <li>
           <p>
-            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
-              [Granted]
-            </span>
-            S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Granted]</span> S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
             "Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing Agent",
             <em>Indian Patent No. 528,512</em>.
           </p>
