--- a/projects/index.html
+++ b/projects/index.html
@@ -19,6 +19,24 @@
       --ocean-primary: #0096C7;
       --ocean-hover:   #006494;
     }
+
+    /* hide all stray <hr> tags */
+    hr {
+      display: none !important;
+    }
+
+    /* keep only a single underline under the header */
+    .header {
+      border-bottom: 1px solid #eee;
+      margin-bottom: 1.5rem;
+      padding-bottom: 0.5rem;
+    }
+
+    /* remove any border-top on the footer */
+    .footer {
+      border-top: none !important;
+    }
+
     a {
       color: var(--ocean-primary);
       text-decoration: none;
@@ -26,18 +44,6 @@
     a:hover, a:focus {
       color: var(--ocean-hover);
       text-decoration: underline;
-    }
-
-    /* hide all stray <hr> tags */
-    hr {
-      display: none !important;
-    }
-
-    /* apply exactly one underline to the header */
-    .header {
-      border-bottom: 1px solid #eee;
-      margin-bottom: 1.5rem;
-      padding-bottom: 0.5rem;
     }
 
     /* Desktop gallery layout (unchanged) */
@@ -164,8 +170,7 @@
         <li class="passive"><a href="/projects" style="text-transform: none;">Projects</a></li>
         <li><a href="/publications" style="text-transform: none;">Publications</a></li>
         <li class="passive">
-          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
-             style="text-transform: none;">CV</a>
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing" style="text-transform: none;">CV</a>
         </li>
       </ul>
       <div class="header-right">
@@ -180,9 +185,7 @@
     <ul class="mobile-menu" id="mobile-menu">
       <li><a href="/projects">Projects</a></li>
       <li><a href="/publications">Publications</a></li>
-      <li>
-        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a>
-      </li>
+      <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a></li>
     </ul>
 
     <div class="projects">
@@ -259,7 +262,7 @@
   <script>
     document.getElementById('menu-btn').addEventListener('click', function() {
       var m = document.getElementById('mobile-menu');
-      m.style.display = (m.style.display === 'block' ? 'none' : 'block');
+      m.style.display = m.style.display === 'block' ? 'none' : 'block';
     });
   </script>
   <script src="https://code.jquery.com/jquery.js"></script>
