--- a/projects/index.html
+++ b/projects/index.html
@@ -229,7 +229,7 @@
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
           <img src="/img/Soc_project.png" alt="SoC Security">
         </a>
-        <div class="desc">SoC Security: A logic level methodology to prevent differential power analysis</div>
+        <div class="desc">Logic Level SoC Power Security</div>
       </div>
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
