--- a/publications/index.html
+++ b/publications/index.html
@@ -158,7 +158,7 @@
             <a href="#" target="_blank">
               "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
             </a>
-            <em>PerCom Workshops</em>, 2025.
+            <em>IEEE International Conference on Pervasive Computing and Communications Workshops (PerCom Workshops)</em>, 2025.
           </p>
         </li>
       </ol>
@@ -173,7 +173,7 @@
             <a href="#" target="_blank">
               "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
             </a>
-            <em>COMSNETS</em>, 2024.
+            <em>International Conference on COMmunication Systems &amp; NETworkS (COMSNETS)</em>, 2024.
           </p>
         </li>
         <li>
