--- a/projects/index.html
+++ b/projects/index.html
@@ -28,14 +28,22 @@
       text-decoration: underline;
     }
 
-    /* hide all HRs and apply exactly one underline under the header */
-    hr { display: none !important; }
+    /* hide all stray <hr> tags */
+    hr {
+      display: none !important;
+    }
+
+    /* keep only a single underline under the header */
     .header {
       border-bottom: 1px solid #eee;
       margin-bottom: 1.5rem;
       padding-bottom: 0.5rem;
     }
-    .footer { border-top: none !important; }
+
+    /* remove any border-top on the footer */
+    .footer {
+      border-top: none !important;
+    }
 
     /* Desktop gallery layout unchanged */
     div.gallery {
@@ -44,7 +52,6 @@
       border: 0;
       float: left;
       width: 200px;
-      /* height removed so inner img can size freely */
     }
     div.gallery:hover {
       --c: #1095c1;
@@ -82,7 +89,8 @@
     }
 
     /* hide mobile menu on desktop */
-    #menu-btn, .mobile-menu {
+    #menu-btn,
+    .mobile-menu {
       display: none;
     }
 
@@ -92,7 +100,7 @@
         display: none !important;
       }
 
-      /* hamburger */
+      /* hamburger button */
       #menu-btn {
         display: inline-block !important;
         font-size: 1.5em;
@@ -170,8 +178,7 @@
         <li class="passive"><a href="/projects" style="text-transform: none;">Projects</a></li>
         <li><a href="/publications" style="text-transform: none;">Publications</a></li>
         <li class="passive">
-          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
-             style="text-transform: none;">CV</a>
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing" style="text-transform: none;">CV</a>
         </li>
       </ul>
       <div class="header-right">
@@ -186,13 +193,10 @@
     <ul class="mobile-menu" id="mobile-menu">
       <li><a href="/projects">Projects</a></li>
       <li><a href="/publications">Publications</a></li>
-      <li>
-        <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a>
-      </li>
+      <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a></li>
     </ul>
 
     <div class="projects">
-      <!-- All your gallery items below -->
       <div class="gallery">
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
           <img src="/img/IMG_0244.jpeg" alt="PA2BLO">
@@ -207,7 +211,61 @@
         <div class="desc">u-Bat</div>
       </div>
 
-      <!-- …rest of your projects unchanged… -->
+      <div class="gallery">
+        <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
+          <img src="/img/pointSpectra.jpg" alt="pointSpectra">
+        </a>
+        <div class="desc">pointSpectra</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
+          <img src="/img/UDR_ADC.PNG" alt="UDR-ADC prototype">
+        </a>
+        <div class="desc">UDR-ADC prototype</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
+          <img src="/img/Dhvani.jpeg" alt="Dhvani">
+        </a>
+        <div class="desc">Dhvani</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">
+          <img src="/img/MSD_project.png" alt="Gamma Brain Wave Filter">
+        </a>
+        <div class="desc">Gamma Brain Wave Filter</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
+          <img src="/img/Soc_project.png" alt="SoC Security">
+        </a>
+        <div class="desc">Logic Level SoC Power Security</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
+          <img src="/img/Red_ball.png" alt="Red Ball Detection on Quadcopter">
+        </a>
+        <div class="desc">Red Ball Detection on Quadcopter</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">
+          <img src="/img/EMI.png" alt="EMI Sensing Board">
+        </a>
+        <div class="desc">EMI Sensing Board</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
+          <img src="/img/IIITDuino.PNG" alt="IIITDuino">
+        </a>
+        <div class="desc">IIITDuino</div>
+      </div>
     </div>
 
     <div class="footer">
