--- a/publications/index.html
+++ b/publications/index.html
@@ -171,7 +171,7 @@
         <li>
           <p>
             <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[CoMoRea, PerCom'25]</span> <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
-            <a href="#" target="_blank">
+            <a href="https://ieeexplore.ieee.org/abstract/document/11038662" target="_blank">
               "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
             </a>
             <em>IEEE International Conference on Pervasive Computing and Communications Workshops (PerCom Workshops)</em>, 2025.
