--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
           <img src="https://img.icons8.com/material-two-tone/344/google-scholar.png"
                style="width:25px; height:25px; vertical-align:middle;">
           <a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&amp;hl=en">Google Scholar</a>
+          Learn more 
+        <span title="Yes, that panel on the right side when you Google someone.">
+          <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#4285F4; font-weight: 500; text-decoration: none;">
+            on Google
+    </a>
+  </span>.
         </p>
         <span itemprop="hashtags">
           <p style="margin-top:20px; font-size:14px; color:var(--ocean-primary);">
