--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
           <img src="https://img.icons8.com/material-two-tone/344/google-scholar.png"
                style="width:25px; height:25px; vertical-align:middle;">
           <a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&amp;hl=en">Google Scholar</a>
-          Learn more 
-        <span title="Yes, that panel on the right side when you Google someone.">
-          <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#4285F4; font-weight: 500; text-decoration: none;">
-            on Google
+          <p style="font-size: 0.9em;">
+  👀 <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="text-decoration: none; color: #555;">There’s a box about me on Google</a>.
+</p>
+
     </a>
   </span>.
         </p>
