--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
                style="width:25px; height:25px; vertical-align:middle;">
           <a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&amp;hl=en">Google Scholar</a>
           <p style="font-size: 0.9em;">
-  👀 <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="text-decoration: none; color: #555;">There’s a box about me on Google</a>.
 </p>
 
     </a>
@@ -189,6 +188,8 @@
           In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you
           can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>),
           enjoy reading non-fiction, and have a diverse palette when it comes to food.
+
+          <span style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#4285F4; text-decoration: none;">Googling me</a>.</span>
         </p>
       </div>
     </div>
