--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 </p>
 
     </a>
-  </span>.
-        </p>
+  </span>
         <span itemprop="hashtags">
           <p style="margin-top:20px; font-size:14px; color:var(--ocean-primary);">
             #neuromorphic  #wearables  #lowpowersystems  #tinyML  #IoT  #ubiquitouscomputing
