--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
             #neuromorphic  #wearables  #lowpowersystems  #tinyML  #IoT  #ubiquitouscomputing
           </p>
         </span>
+      <span style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#0096C7; text-decoration: none;">Googling me</a>.</span>
+
       </div>
 
       <div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
@@ -188,7 +190,6 @@
           can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>),
           enjoy reading non-fiction, and have a diverse palette when it comes to food.
 
-          <span style="font-style: italic; font-size: 0.8em; color: #555;">If you're still curious, try <a href="https://www.google.com/search?q=Hemanth+Sabbella" target="_blank" style="color:#4285F4; text-decoration: none;">Googling me</a>.</span>
         </p>
       </div>
     </div>
